deploy-backend.yml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: deploy2

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: cont2
          image: httpd
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service

metadata:
  name: myservice1

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - port: 80
      targetPort: 80
