deploy-db.yml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: deploy3

spec:
  replicas: 2

  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
        - name: cont2
          image: shaikmustafa/dm
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service

metadata:
  name: myservice2

spec:
  type: ClusterIP

  selector:
    app: db

  ports:
    - port: 80
      targetPort: 80
