deploy.yml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: deploy1

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: cont1
          image: nginx
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service

metadata:
  name: myservice

spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 80
