ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: myingress

   annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /


spec:
  ingressClassName: nginx
  rules:
    -http:
      paths:
        - path: /nginx
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
        - path: /nttpd
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 80
        - path: /shaikmustafa/cycle
          pathType: Prefix
          backend:
            service:
              name: db
              port:
                number: 80
